fix font size and spacing

--- a/docs/assets/css/typedoc.css
+++ b/docs/assets/css/typedoc.css
@@ -1067,15 +1067,6 @@ dl.tsd-comment-tags p {
   margin: 0;
 }
 
-.tsd-panel.tsd-comment .lead {
-  font-size: 1.1em;
-  line-height: 1.333em;
-  margin-bottom: 2em;
-}
-.tsd-panel.tsd-comment .lead:last-child {
-  margin-bottom: 0;
-}
-
 
 footer .tsd-legend {
   display: inline-block;
